--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "ether",
+  "name": "volume-bot-gui",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node ./index.ts"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "bot": "ts-node ./bot/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,19 @@
     "fs": "^0.0.1-security",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "lucide-react": "^0.263.1",
+    "framer-motion": "^10.16.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "vite": "^5.3.1"
   }
 }
